--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -4,12 +4,28 @@
 }
 
 .sidebar ul.nav-sub-links {
-    margin: -0.5rem 0 0 3.5rem;
+    /*margin: -0.5rem 0 0 3.5rem;*/
+    margin: 0;
+}
+.sidebar .nav li:first-child {
+    border-top: 1px solid #7c7979;
+}
+.sidebar .nav-sub-links a:last-child > li {
+    border-bottom: 1px solid #7c7979;
 }
 
 .sidebar .nav li {
-    list-style-type: disc
+    list-style-type: none;
+    padding: 10px 0 10px 20px;
+    border-top: 1px solid #7c7979;
+    border-right: 0;
+    border-left: 0;
+    background: #e7e7ff;
 }
+
+
+
+
 
 .sidebar .nav li a {
     margin: 0 !important;
@@ -19,6 +35,16 @@
     color: #5c5cce;
 }
 
+.sidebar .nav i {
+    font-size: 24px;
+    float: left;
+    margin-right: 5px;
+    line-height: inherit;
+    width: auto;
+    text-align: center;
+    color: #a9afbb;
+}
+
 li::marker {
     color: #5c5cce;
     font-size: 1.2em;
@@ -26,13 +52,14 @@ li::marker {
 
 .sidebar .other-links {
     display: flex;
-    gap: 15px;
-    margin: 1rem 1.4rem;
+    margin: 1rem 1.1rem;
+    flex-direction: column;
+    gap: 0;
 }
 
 .sidebar .auth {
     display: flex;
-    gap: 15px;
+    gap: 7px;
     cursor: pointer;
 }
 
